// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectionState Gets correct color 1`] = `
.c0 {
  grid-column: status-text;
  position: relative;
  margin: 0;
  padding-top: 0;
  margin-left: 15px;
  text-align: left;
}

<p
  className="c0"
>
  Blanko
</p>
`;

exports[`connectionState Gets correct color 2`] = `
.c0 {
  grid-column: status-text;
  position: relative;
  margin: 0;
  padding-top: 0;
  margin-left: 15px;
  text-align: left;
  color: #C0392B;
}

<p
  className="c0"
  color="#C0392B"
>
  Disconnected
</p>
`;

exports[`connectionState Gets correct color 3`] = `
.c0 {
  grid-column: status-text;
  position: relative;
  margin: 0;
  padding-top: 0;
  margin-left: 15px;
  text-align: left;
  color: #F39C12;
}

<p
  className="c0"
  color="#F39C12"
>
  Connecting
</p>
`;

exports[`connectionState Gets correct color 4`] = `
.c0 {
  grid-column: status-text;
  position: relative;
  margin: 0;
  padding-top: 0;
  margin-left: 15px;
  text-align: left;
  color: #27AE60;
}

<p
  className="c0"
  color="#27AE60"
>
  Connected
</p>
`;

exports[`connectionState renders correctly 1`] = `
.c1 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #27AE60;
  background-color: #27AE60;
}

.c0 {
  display: grid;
  grid-template-columns: [status-indicator] 20px [status-text] 1fr;
}

.c2 {
  grid-column: status-indicator;
  float: right;
  text-align: left;
}

.c3 {
  grid-column: status-text;
  position: relative;
  margin: 0;
  padding-top: 0;
  margin-left: 15px;
  text-align: left;
  color: #27AE60;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    color="#27AE60"
  />
  <p
    className="c3"
    color="#27AE60"
  >
    Connected
  </p>
</div>
`;
